--- a/index.html
+++ b/index.html
@@ -440,7 +440,7 @@ Since the downstream Edge Adapter is responsible for action generation, we feed 
     <section class="section" id="BibTeX">  
       <div class="container is-max-desktop">    
         <h2 class="title">BibTeX</h2>
-        <pre><code> @misc{hirose2025omnivla,
+        <pre><code> @misc{hirose2026asyncvla,
       title={AsyncVLA: An Asynchronous VLA for Fast and Robust Navigation on the Edge}, 
       author={Noriaki Hirose and Catherine Glossop and Dhruv Shah and Sergey Levine},
       year={2026},
