--- a/index.html
+++ b/index.html
@@ -421,7 +421,17 @@ Since the downstream Edge Adapter is responsible for action generation, we feed 
                         <video poster="" id="tello" autoplay controls muted loop playsinline height="100%">
                             <source src="./static/videos/lan/lan_nav_prompt_4.mp4" type="video/mp4">
                         </video>
-                    </div>                                               
+                    </div>         
+                    <div class="item item-tello">
+                        <video poster="" id="tello" autoplay controls muted loop playsinline height="100%">
+                            <source src="./static/videos/lan/lan_nav_prompt_6.mp4" type="video/mp4">
+                        </video>
+                    </div>           
+                    <div class="item item-tello">
+                        <video poster="" id="tello" autoplay controls muted loop playsinline height="100%">
+                            <source src="./static/videos/lan/lan_nav_prompt_7.mp4" type="video/mp4">
+                        </video>
+                    </div>                                                               
                     <div class="item item-tello">
                         <video poster="" id="tello" autoplay controls muted loop playsinline height="100%">
                             <source src="./static/videos/lan/lan_nav_prompt_3.mp4" type="video/mp4">
