--- a/index.html
+++ b/index.html
@@ -168,40 +168,44 @@
         </div>
     </section>
 
-  <section class="section">
-    <div class="container is-max-desktop">
-      <!-- Abstract. -->
-      <div class="columns is-centered has-text-centered">
-        <div class="column is-four-fifths">
-          <div class="publication-video">
-            <video autoplay controls muted loop playsinline width="80%">
-              <source src="static/videos/tesear_video.mp4" type="video/mp4">
-            </video>          
-          </div>   
-          <h2 class="title is-3">Abstract</h2>
-          <div class="content has-text-justified">
-            <p>
-            Robotic foundation models achieve strong generalization by leveraging internet-scale vision-language representations, but their massive computational cost creates a fundamental bottleneck: high inference latency. In dynamic environments, this latency breaks the control loop, rendering powerful models unsafe for real-time deployment. We propose AsyncVLA, an asynchronous control framework that decouples semantic reasoning from reactive execution. Inspired by hierarchical control, AsyncVLA runs a large foundation model on a remote workstation to provide high-level guidance, while a lightweight, onboard Edge Adapter continuously refines actions at high frequency. To bridge the domain gap between these asynchronous streams, we introduce an end-to-end finetuning protocol and a trajectory re-weighting strategy that prioritizes dynamic interactions. We evaluate our approach on real-world vision-based navigation tasks with communication delays up to 6 seconds. AsyncVLA achieves a 40\% higher success rate than state-of-the-art baselines, effectively bridging the gap between the semantic intelligence of large models and the reactivity required for edge robotics.
+<section class="section pt-4 pb-5">
+  <div class="container is-max-desktop">
 
-            </p>
-          </div>
-        </div>
-      </div>
-      <!--/ Abstract. -->
+    <div class="columns is-centered">
+      <div class="column is-four-fifths">
 
-      <!-- Paper video. -->
-      <div class="columns is-centered has-text-centered">
-        <div class="column is-four-fifths">
-          <h2 class="title is-3">Full video</h2>
-          <div class="publication-video">
-            <video autoplay controls muted loop playsinline width="100%">
-              <source src="static/videos/full_video.mp4" type="video/mp4">
-            </video>
-          </div>
+        <!-- Key Highlights -->
+        <div class="content has-text-justified mb-6">
+          <h2 class="title is-4">Key Highlights</h2>
+          <p>
+          <strong>AsyncVLA</strong> is an asynchronous control framework that enables real-time deployment of large robotic foundation models while handling network and inference latency.
+          </p>
+          <ol style="display: inline-block; text-align: left; font-size: 18px; line-height: 1.6;">
+            <li><strong>Asynchronous VLA:</strong> High-level reasoning is seperate from onboard reactive control.</li>
+            <li><strong>End-to-End Learning:</strong> Base VLA is aligned with the edge control for rapid adaptation.</li>
+            <li><strong>Robust Real-World Performance:</strong> High success with few collisions under latency.</li>
+          </ol>
         </div>
+
+
+        <div class="publication-video">
+          <video autoplay controls muted loop playsinline width="80%">
+            <source src="static/videos/tesear_video.mp4" type="video/mp4">
+          </video>
+        </div>
+
+        <h2 class="title is-3 has-text-centered">Abstract</h2>
+        <div class="content has-text-justified">
+          <p>
+            Robotic foundation models generalize well via internet-scale vision-language representations, but their high computational cost causes latency that breaks the control loop, making them unsafe for real-time deployment. We propose AsyncVLA, an asynchronous control framework that decouples semantic reasoning from reactive execution. Inspired by hierarchical control, AsyncVLA runs a large foundation model on a remote workstation for high-level guidance, while a lightweight onboard Edge Adapter continuously refines actions. To align these asynchronous streams, we introduce end-to-end finetuning and a trajectory re-weighting strategy prioritizing dynamic interactions. On real-world vision-based navigation tasks with delays up to 6 seconds, AsyncVLA achieves a 40% higher success rate than state-of-the-art baselines, bridging semantic intelligence and edge reactivity.
+          </p>
+        </div>
+
       </div>
     </div>
-  </section>
+
+  </div>
+</section>
 
   <section class="section">
     <div class="container is-max-desktop">
@@ -210,25 +214,19 @@
           <h2 class="title is-3">Approach</h2>
           <div class="content has-text-justified has-text-centered">
             <h3 class="title is-4">Motivation</h3>
-            <p>
-            VLAs can inherit internet-scale knowledge from VLMs, resulting in vastly superior vision and language understanding compared to those trained from scratch. However, as we massively scale up the size of our robot policies, we sacrifice inference speed, which can impact performance. In particular, increased inference latency results in longer control cycles, which manifest as time delays in the control loop that can degrade overall system performance. This paper tackles the research question: how can large robotic foundation models be deployed on the edge without being constrained by their computational cost?
-            </p>
-            <p>                        
-            The challenges associated with large-scale foundation models are especially pronounced in mobile robots. Due to the limited field of view with ego-centric camera views, mobile robots cannot fully perceive their surroundings from a given observation. With the presence of dynamic obstacles, such as pedestrians, this problem is further exacerbated.  Consequently, mobile robots must continuously update their observations while navigating and rapidly generate actions based on the most recent sensory inputs. As a result, the increasing computational burden associated with scaling robotic foundation models directly leads to performance degradation in real-world navigation tasks.           
-            </p>          
+            <p> VLAs inherit internet-scale knowledge from VLMs, giving them far superior vision and language understanding compared to models trained from scratch. However, scaling up robot policies comes at the cost of inference speed, which can degrade performance. In particular, longer inference times slow the control loop, causing delays that impact overall system behavior. This paper addresses the question: how can large robotic foundation models be deployed on the edge without being limited by computational cost? 
+            </p> 
+            <p> These challenges are especially pronounced in mobile robots. With a limited ego-centric field of view, robots cannot fully perceive their surroundings from a single observation. Dynamic obstacles, such as pedestrians, exacerbate this issue. Mobile robots must continuously update observations and generate actions based on the latest sensory inputs. Scaling foundation models increases computational load, directly reducing performance in real-world navigation tasks. 
+            </p>         
             <h3 class="title is-4">AsyncVLA</h3>
             <p>
-            We propose an asynchronous navigation system, AsyncVLA, that leverages the rich language and visual understanding of existing robotic foundation models, while providing for quick reactive control based on the most recent observations. To achieve such a reactive policy without sacrificing rich semantic understanding, AsyncVLA integrates three key design choices into a single system: (1) a lightweight action head, Edge Adapter that runs on board the robot, (2) automatic data re-balancing to encourage reactive behavior, and (3) end-to-end training for better aligning the base VLA and the Edge Adapter. During inference, we decouple AsyncVLA into the base VLA and the Edge Adapter. The base VLA is deployed on a workstation equipped with a high-performance GPU, while the Edge Adapter is implemented on the robot’s onboard controller to process observations without additional latency for quick reactions.
+            We propose AsyncVLA, an asynchronous navigation system that combines the rich language-visual understanding of robotic foundation models with fast, reactive control. To achieve reactive behavior without losing semantic understanding, AsyncVLA integrates three key components: (1) a lightweight onboard Edge Adapter for action refinement, (2) automatic data re-balancing to encourage responsiveness, and (3) end-to-end training to better align the base VLA with the Edge Adapter. During inference, AsyncVLA separates the system: the base VLA runs on a high-performance workstation, while the Edge Adapter operates on the robot’s controller, processing observations with minimal latency for rapid reactions.
             </p>
             <img src="./static/images/pull.png" style="display:block; margin:auto; width:1000px; height:auto;" />               
             <h3 class="title is-4">Network</h3>
-            <p>
-
-            
-            We build AsyncVLA on top of OmniVLA, a vision-based robotic foundation model for navigation, which serves as our base VLA. OmniVLA is a navigation policy capable of generating actions conditioned on multiple goal modalities, including 2D goal poses, language instructions, and egocentric goal images. The base VLA interprets these diverse modalities at a high level using large-scale visual encoders (SigLIP and DINOv2) and a language model (LLaMA2 7B).
-            </p>
-            <p>            
-Since the downstream Edge Adapter is responsible for action generation, we feed it the action token embeddings of OmniVLA, which encode features that represent the actions but also encode the semantic and visual information interpreted by OmniVLA. However, the embeddings produced by OmniVLA have a dimensionality of 8x4x4096, corresponding to an action chunk size of 8, an action dimension of 4, and an embedding size of 4096. Directly feeding these high-dimensional embeddings into the Edge Adapter would significantly increase the network size and computational cost in the robot's onboard controller. To address this issue, we apply a token projector with two MLP ResNet blocks to each action token, compressing its dimensionality from 4×4096 to 1024 before feeding it into the Edge Adapter. This compression enables efficient transmission of the generated token embeddings from the workstation to the robot’s onboard controller during inference.        
+            <p> We build AsyncVLA on OmniVLA, a vision-based robotic foundation model for navigation, which serves as our base VLA. OmniVLA generates actions conditioned on multiple goal modalities, including 2D goal poses, language instructions, and egocentric goal images. It interprets these modalities using large-scale visual encoders (SigLIP and DINOv2) and a language model (LLaMA2 7B). 
+            </p> 
+            <p> Since the Edge Adapter handles action generation, we feed it OmniVLA’s action token embeddings, which encode both action features and the semantic-visual information interpreted by OmniVLA. These embeddings have a high dimensionality of 8×4×4096 (action chunk size × action dimension × embedding size). Feeding them directly into the Edge Adapter would increase onboard network size and computational cost. To address this, we apply a **token projector** with two MLP ResNet blocks to compress each token from 4×4096 to 1024 dimensions, enabling efficient transmission from the workstation to the robot during inference. 
             </p>
             <img src="./static/images/AsyncVLA.png" style="display:block; margin:auto; width:500px; height:auto;" />                   
           </div>
@@ -277,7 +275,7 @@ Since the downstream Edge Adapter is responsible for action generation, we feed 
     <p>
     We conducted experiments involving various interactions with the robot. The following videos present representative samples from these experiments.
     </p>       
-    <section class="hero is-light is-small">      
+    <section class="hero is-light is-small" style="margin-top: 20px;">      
         <div class="hero-body">
             <div class="container">
                 <div id="results-carousel" class="carousel results-carousel">
@@ -327,11 +325,11 @@ Since the downstream Edge Adapter is responsible for action generation, we feed 
                 <h3 class="title is-4">Robustness for large delay in 2D goal pose-conditioned navigation</h3>
                 <div class="content has-text-justified">
                   <p>
-                  We evaluate the robustness of policies inferenced on the workstation under artificially introduced time delays, simulating increased latency. Specifically, we test workstation latency of 0.2 seconds, 2.0 seconds, and 5.0 seconds, while the robot’s onboard controller computes actions at its best rate, which is independent of the environment. As shown in following graph, our method outperforms OmniVLA at the lowest latency of 0.2 seconds, and this performance gap increases as the artificial latency increases. As the Edge Adapter is running on the onboard controller, it can adapt the guidance provided by the base VLA as the action token embeddings based on information provided in the current observation. In contrast, OmniVLA produces actions conditioned on stale observations, leading to degraded navigation performance as latencies increase.
+                  We evaluate policy robustness under artificially introduced workstation delays of 0.2 s, 2.0 s, and 5.0 s, while the robot’s onboard controller computes actions at its maximum rate. As shown in the following graph, AsyncVLA outperforms OmniVLA even at 0.2 s latency, with the performance gap widening as delays increase. The onboard Edge Adapter adapts the base VLA’s guidance based on current observations, whereas OmniVLA generates actions from stale data, causing navigation performance to degrade under higher latencies.
                   </p>
                   <img src="./static/images/graph_latency.png" style="display:block; margin:auto; width:700px; height:auto;" />   
                   <p>
-                  The following videos compare our method with the strong baseline, OmniVLA. While both methods perform well at 5 Hz inference without time delay, the baseline exhibits large overshoots and fails to navigate at 0.2 Hz inference under artificial time delay. In contrast, our AsyncVLA continues to perform reliably, as the Edge Adapter can rapidly adjust the robot’s behavior and guide it toward the goal pose.
+                  The videos compare AsyncVLA with the strong baseline, OmniVLA. At 5 Hz without delay, both perform well, but at 0.2 Hz with artificial delay, OmniVLA overshoots and fails to navigate. In contrast, AsyncVLA remains reliable, as the onboard Edge Adapter quickly adjusts actions and guides the robot toward the goal.
                   </p>                  
                                        
                   <video autoplay controls muted loop playsinline width="80%" style="display: block; margin: 0 auto;">
@@ -344,9 +342,9 @@ Since the downstream Edge Adapter is responsible for action generation, we feed 
 
     <!-- Results Carousel -->
     <p>
-    We conducted quantitative experiments in cluttered environments with and without pedestrians to navigate the robot toward goal positions up to 30 meters away. The following videos present representative samples without pedestrians from these experiments.
+    We conducted quantitative experiments in cluttered environments, with and without pedestrians, navigating the robot to goals up to 30 m away. The following videos show representative samples from experiments without pedestrians.
     </p>           
-    <section class="hero is-light is-small">
+    <section class="hero is-light is-small" style="margin-top: 20px;">
         <div class="hero-body">
             <div class="container">
                 <div id="results-carousel" class="carousel results-carousel">                
@@ -396,7 +394,7 @@ Since the downstream Edge Adapter is responsible for action generation, we feed 
                 <h3 class="title is-4">Language-conditioned navigation</h3>
                 <div class="content has-text-justified">
                   <p>
-                  Since AsyncVLA uses OmniVLA as its pretrained model, it can leverage its ability to map high-level language and visual understanding into actions, enabling behavior that follows language instructions effectively. In our evaluations, AsyncVLA shows robustness to out-of-distribution language instructions, resulting in performance comparable to OmniVLA.
+                  Since AsyncVLA builds on OmniVLA, it inherits the ability to translate high-level language and visual understanding into actions, enabling effective instruction-following. In our evaluations, AsyncVLA remains robust to out-of-distribution language instructions, achieving performance comparable to OmniVLA.
                   </p>
                 </div>
           </div>
