--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                             <div class="publication-links">
                                 <!-- PDF Link. -->
                                 <span class="link-block">
-                                    <a href="https://arxiv.org/pdf/2509.19480"
+                                    <a href="https://arxiv.org/pdf/2602.13476"
                                         class="external-link button is-normal is-rounded is-dark">
                                     <span class="icon">
                                     <i class="fas fa-file-pdf"></i>
@@ -452,10 +452,10 @@
       title={AsyncVLA: An Asynchronous VLA for Fast and Robust Navigation on the Edge}, 
       author={Noriaki Hirose and Catherine Glossop and Dhruv Shah and Sergey Levine},
       year={2026},
-      eprint={xxxx.xxxxx},
+      eprint={2602.13476},
       archivePrefix={arXiv},
       primaryClass={cs.RO},
-      url={https://arxiv.org/abs/xxxx.xxxxx}, 
+      url={https://arxiv.org/abs/2602.13476}, 
       }</code></pre>            
       </div>
     </section>
